# todo

./: LICENSE  README.md  makefile  pyproject.toml
tests/: test_io.py
tests/static/: example.csv
todo/: add.py  io.py  list.py  main.py
