[tool.poetry]
name = "todo"
version = "0.0.1"
description = "Terminal based to-do list manager"
authors = ["Eric Fulmer <2952996+EFulmer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "~7.2.0"
ipython = "^8.14.0"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
